--- a/home.css
+++ b/home.css
@@ -51,3 +51,63 @@ header{
 .nav-link ul li:first-of-type a{
     color: #34C759;
 }
+
+        /* Main */
+
+main {
+    width: 100%;
+    height: 749px;
+    position: relative;
+}
+
+.main-card{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: relative;
+    top: 171px;
+}
+.main-body h1{
+    font-size: 72px;
+    color: #fff;
+    letter-spacing: 5px;
+    line-height: 84px;
+}
+.main-body h1 span{
+    font-weight: 100;
+}
+.main-body p {
+    color: #fff;
+    opacity: 0.7;
+    padding-top: 16px;
+    padding-bottom: 40px;
+}
+.main-body button {
+    padding: 25px 56px;
+    background: #34C759;
+    color: black;
+    border-radius: 43px;
+    border: 0;
+    font-weight: 700;
+    font-size: 18px;
+}
+.main-body button:hover {
+    background-color: #0c7326;
+    cursor: pointer;
+}
+
+.main-contact {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 70px;
+}
+
+.contact-card h3{
+    padding-top: 13px;
+    color: #fff;
+}
+.contact-card p{
+    font-size: 14px;
+    color: #fff;
+    opacity: 0.5;
+}
