--- a/home.css
+++ b/home.css
@@ -8,7 +8,10 @@
 a {
     text-decoration: none;
 }
-
+body{
+    width: 100%;
+    background: #1a1a1a;
+}
         /* Navbar */
 header{
     max-width: 1440px;
@@ -30,6 +33,7 @@ header{
     top: 0;
     left: 0;
     border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+    z-index: 10;
 }
 
 .nav-link ul{
@@ -58,6 +62,7 @@ main {
     width: 100%;
     height: 749px;
     position: relative;
+    overflow: auto;
 }
 
 .main-card{
@@ -100,6 +105,7 @@ main {
     display: flex;
     justify-content: space-evenly;
     margin-top: 70px;
+    z-index: 2;
 }
 
 .contact-card h3{
@@ -111,3 +117,146 @@ main {
     color: #fff;
     opacity: 0.5;
 }
+
+        /* About */
+.about{
+    max-width: 1110px;
+    width: 100%;
+    height: 736px;
+    background: #252525;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.about-body h1{
+    font-size: 100px;
+    font-weight: 900;
+    color: #303030;
+    padding-top: 105px;
+    letter-spacing: 0.2rem;
+}
+.about-body h2{
+    font-size: 30px;
+    position: relative; 
+    top: -75px;
+    z-index: 2;
+    color: #D9D9D9;
+    letter-spacing: 0.2rem;
+}
+.about-body p{
+    color: #A6A6A6;
+}
+.about-img-top{
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+    top: 90px;
+}
+
+.about-btn{
+    border: #252525;
+    border-radius: 50%;
+    background-color: #252525;
+    position: relative;
+    top: 100px;
+}
+.about-btn:hover {
+    cursor: pointer;
+}
+.about-img img{
+    padding-left: 10px;
+}
+
+        /* Work */
+.work{
+    max-width: 1110px;
+    width: 100%;
+    height: 476px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.work-head  h1{
+    font-size: 75px;
+    position: relative;
+    top: 90px;
+    color: #303030;
+    font-weight: 900;
+    letter-spacing: 0.2rem;
+}
+.work-head h2 {
+    color: #D9D9D9;
+    font-size: 36px;
+    position: relative;
+    top: 25px;
+    font-weight: 400;
+    letter-spacing: 0.2rem;
+}
+.work-head hr{
+    width: 60px;
+    height: 2px;
+    border: #34C759;
+    background-color: #34C759;
+    position: relative;
+    top: 61px;
+    margin: 0 auto;
+}
+
+.work-body{
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    position: relative;
+    top: 140px;
+}
+.work-card{
+    width: 255px;
+    height: 206px;
+    background: #252525;
+    position: relative;
+}
+.work-card h1{
+    position: absolute;
+    left: 24px;
+    top: 24px;
+    color: #fff;
+}
+.work-card hr{
+    width: 56px;
+    height: 2px;
+    position: absolute;
+    left: 24px;
+    top: 75px;
+    background: #34C759;
+    border: #34C759;
+}
+.work-card p{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 13px;
+    position: absolute;
+    top: 100px;
+    left: 24px;
+    right: 31px;
+} 
+.work-card:hover {
+    background-color: #34C759;
+    cursor: pointer;
+}
+.work-card:hover h1{
+    color: #191919;
+}
+.work-card:hover hr{
+    background-color: #191919;
+}
+.work-card:hover p{
+    color: #191919;
+}
+
