--- a/home.css
+++ b/home.css
@@ -34,6 +34,7 @@ header{
     top: 0;
     left: 0;
     border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+    z-index: 10;
 }
 
 .nav-link ul{
@@ -62,6 +63,7 @@ main {
     width: 100%;
     height: 749px;
     position: relative;
+    overflow: auto;
 }
 
 .main-card{
@@ -128,7 +130,7 @@ main {
     flex-direction: column;
     text-align: center;
     position: relative;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .about-body h1{
