--- a/home.css
+++ b/home.css
@@ -260,3 +260,92 @@ main {
 .work-card:hover p{
     color: #191919;
 }
+
+            /* DISHES */
+
+.dishes{
+    max-width: 1110px;
+    width: 100%;
+    height: 1286px;
+    margin: 0 auto;
+}
+.dishes-head{
+    text-align: center;
+    position: relative;
+    top: 90px;
+}
+.dishes-head h1{
+    font-size: 85px;
+    position: relative;
+    top: 90px;
+    color: #303030;
+    font-weight: 900;
+    letter-spacing: 0.2rem;
+}
+.dishes-head h2 {
+    color: #D9D9D9;
+    font-size: 36px;
+    position: relative;
+    top: 25px;
+    font-weight: 400;
+    letter-spacing: 0.2rem;
+}
+.dishes-head hr{
+    width: 60px;
+    height: 2px;
+    border: #34C759;
+    background-color: #34C759;
+    position: relative;
+    top: 61px;
+    margin: 0 auto;
+}
+.dishes-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(350px, 1fr));
+    gap: 30px;
+    position: relative;
+    top: 300px;
+}
+.dishes-card{
+    max-width: 100%;
+    width: 350px;
+    height: 493px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: #252525;
+}
+.dishes-title h1{
+    padding:  0 30px;
+    color: #D9D9D9;
+    font-size: 32px;
+}
+.dishes-card  p{
+    padding:  0 30px;
+    color: #85878C;
+    font-size: 13px;
+}
+.dishes-star {
+    display: flex;
+    flex-direction: row;
+    padding: 0  10px 20px 30px;
+}
+.dishes-star div{
+    display: flex;
+}
+.dishes-star p{
+    padding-top: 8px;
+}
+
+.dishes-star button{
+    background-color: #252525;
+    border-radius: 30px;
+    padding: 5px 20px;
+    border: 0;
+    color:  #FFFFFF80;
+}
+.dishes-star button:hover{
+    color: #252525;
+    background-color: #34C759;
+    cursor: pointer;
+}
