--- a/home.css
+++ b/home.css
@@ -266,15 +266,16 @@ main {
 .dishes{
     max-width: 1110px;
     width: 100%;
-    height: 1286px;
+    height: 1586px;
     margin: 0 auto;
+    overflow: auto;
 }
 .dishes-head{
     text-align: center;
     position: relative;
     top: 90px;
 }
-.dishes-head h1{
+.dishes-head h1, .chef-title h1{
     font-size: 85px;
     position: relative;
     top: 90px;
@@ -282,7 +283,7 @@ main {
     font-weight: 900;
     letter-spacing: 0.2rem;
 }
-.dishes-head h2 {
+.dishes-head h2, .chef-title h2{
     color: #D9D9D9;
     font-size: 36px;
     position: relative;
@@ -290,7 +291,7 @@ main {
     font-weight: 400;
     letter-spacing: 0.2rem;
 }
-.dishes-head hr{
+.dishes-head hr, .chef-title hr{
     width: 60px;
     height: 2px;
     border: #34C759;
@@ -355,4 +356,50 @@ main {
     color: #252525;
     background-color: #34C759;
     cursor: pointer;
+}
+
+
+        /* Chef */
+
+.chef{
+    max-width: 1110px;
+    width: 100%;
+    height: 450px;
+    margin: 0 auto;
+}
+.chef-title{
+    text-align: center;
+}
+.chef-body{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(350px, 1fr));
+    gap: 30px;
+    position: relative;
+    top: 90px;
+}
+.chef-card{
+    height: 154px;
+    
+}
+.chef-card .chef-card-title{
+    display: flex;
+}
+.chef-card-title img{
+    border-radius: 50%;
+}
+.chef-name h4{
+    font-size: 16px;
+    padding: 11px 0 0 24px;
+    color: #fff;
+}
+.chef-name p{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 12px;
+    padding: 6px 0 0 24px;
+}
+
+.chef-img {
+    padding-top: 24px;
+    display: flex;
+    gap: 30px;
 }
