--- a/home.css
+++ b/home.css
@@ -275,7 +275,7 @@ main {
     position: relative;
     top: 90px;
 }
-.dishes-head h1, .chef-title h1, .recipe-title h1{
+.dishes-head h1, .chef-title h1, .recipe-title h1, .social-title h1{
     font-size: 85px;
     position: relative;
     top: 90px;
@@ -283,7 +283,7 @@ main {
     font-weight: 900;
     letter-spacing: 0.2rem;
 }
-.dishes-head h2, .chef-title h2, .recipe-title h2{
+.dishes-head h2, .chef-title h2, .recipe-title h2, .social-title h2{
     color: #D9D9D9;
     font-size: 36px;
     position: relative;
@@ -291,7 +291,7 @@ main {
     font-weight: 400;
     letter-spacing: 0.2rem;
 }
-.dishes-head hr, .chef-title hr, .recipe-title hr{
+.dishes-head hr, .chef-title hr, .recipe-title hr, .social-title hr{
     width: 60px;
     height: 2px;
     border: #34C759;
@@ -366,6 +366,7 @@ main {
     width: 100%;
     height: 450px;
     margin: 0 auto;
+    overflow: auto;
 }
 .chef-title{
     text-align: center;
@@ -409,15 +410,16 @@ main {
 .recipe{
     max-width: 1110px;
     width: 100%;
-    height: 690px;
+    height: 750px;
     margin: 0 auto;
+    overflow: auto;
 }
 .recipe-title{
     text-align: center;
 }
 .recipe-grid{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(540px, 1fr));
+    grid-template-columns: repeat(auto-fit,minmax(520px, 1fr));
     gap: 30px;
     padding-top: 90px;
 }
@@ -497,6 +499,7 @@ main {
 .recipe-dinner{
     height: 150px;
     background-image: url(images/image.jpg);
+    background-repeat: no-repeat;
     border-radius: 8px;
     padding: 30px 20px 25px 30px;
     color: #fff;
@@ -518,4 +521,83 @@ main {
     font-size: 10px;
     padding: 7px 20px;
     color: #fff;
+}
+
+        /* * SOCIAL * */
+
+.social{
+    max-width: 1110px;
+    width: 100%;
+    height: 750px;
+    margin: 0 auto;
+}
+.social-title {
+    margin-top: 120px;
+    text-align: center;
+}
+.social-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(350px, 1fr));
+    gap: 10px;
+    padding-top: 90px;
+    color: #fff;
+}
+.social-grid hr{
+    height: 2px;
+    background-color: #303030;
+    border: 0;
+}
+.social-card{
+    background-color: #252525;
+    border-radius: 8px;
+    position: relative;
+}
+.social-card h2{
+    font-size: 14px;
+    color: #BFBFBF;
+}
+.social-card-head{
+    display: flex;
+    justify-content: space-between;
+    padding: 25px;
+}
+.social-card-head div{
+    display: flex;
+    gap: 20px;
+}
+.social-card-head h2{
+    padding-top: 8px;
+}
+.social-card-head img {
+    border-radius: 50%;
+}
+.social-card-text{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px 0 0 30px;
+}
+.social-card-text a{
+    color: #34C759;
+}
+.social-card-head button{
+    font-size: 10px;
+    padding: 10px 20px;
+    border-radius:  43px;
+    background-color: #262626;
+    border: 2px solid #303030;
+    color: #737373;
+    font-weight: 900;
+    cursor: pointer;
+}
+.social-img{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(120px, 1fr));
+}
+.social-card .img-icon{
+    position: absolute;
+    top: 131px;
+    left: 158px;
+    border-radius: 50%;
+    cursor: pointer;
 }
