--- a/home.css
+++ b/home.css
@@ -56,6 +56,9 @@ header{
 .nav-link ul li:first-of-type a{
     color: #34C759;
 }
+.navbar label,input{
+    display: none;
+}
 
         /* Main */
 
@@ -106,6 +109,7 @@ main {
     display: flex;
     justify-content: space-evenly;
     margin-top: 70px;
+    padding-bottom: 20px;
 }
 
 .contact-card h3{
@@ -168,6 +172,12 @@ main {
 .about-btn:hover {
     cursor: pointer;
 }
+.about-img{
+    max-width: 100%;
+    display: flex;
+    overflow-x: auto;
+    justify-content: center;
+}
 .about-img img{
     padding-left: 10px;
 }
@@ -178,11 +188,11 @@ main {
     width: 100%;
     height: 476px;
     margin: 0 auto;
-    display: flex;
+    display: flex   ;
     flex-direction: column;
     text-align: center;
     position: relative;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .work-head  h1{
@@ -212,11 +222,12 @@ main {
 }
 
 .work-body{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(240px, 1fr));
     justify-content: space-between;
     gap: 30px;
     position: relative;
-    top: 140px;
+    top: 140px; 
 }
 .work-card{
     width: 255px;
@@ -302,7 +313,7 @@ main {
 }
 .dishes-grid{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
     gap: 30px;
     position: relative;
     top: 300px;
@@ -373,14 +384,13 @@ main {
 }
 .chef-body{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
     gap: 30px;
     position: relative;
     top: 90px;
 }
 .chef-card{
     height: 154px;
-    
 }
 .chef-card .chef-card-title{
     display: flex;
@@ -499,6 +509,7 @@ main {
 .recipe-dinner{
     height: 150px;
     background-image: url(images/image.jpg);
+    background-size: cover;
     background-repeat: no-repeat;
     border-radius: 8px;
     padding: 30px 20px 25px 30px;
@@ -528,9 +539,8 @@ main {
 .social{
     max-width: 1110px;
     width: 100%;
-    height: 750px;
+    height: 800px;
     margin: 0 auto;
-    overflow: auto;
 }
 .social-title {
     margin-top: 120px;
@@ -538,10 +548,11 @@ main {
 }
 .social-grid{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
     gap: 10px;
     padding-top: 90px;
     color: #fff;
+    padding-bottom: 20px;
 }
 .social-grid hr{
     height: 2px;
@@ -594,6 +605,7 @@ main {
 .social-img{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(120px, 1fr));
+    overflow: auto;
 }
 .social-card .img-icon{
     position: absolute;
@@ -637,3 +649,202 @@ footer hr{
     padding-top: 40px;
     padding-bottom: 13px;
 }
+
+        /* Responsive */
+
+@media screen and (max-width: 1109px) {
+    .work-card{
+        margin: 0 auto;
+    }
+
+    .dishes-grid{
+        padding: 0 5%;
+    }
+    .dishes-card{
+        width: 400px;
+    }
+
+    .chef-body{
+        padding: 0 8%;
+    }
+    
+    .recipe-breakfast{
+        margin: 0 auto;
+    }
+    .recipe-right{
+        width: 540px;
+        margin: 0 auto;
+    }
+    .social{
+        overflow: auto; 
+    }
+}
+@media screen and (max-width: 749px){
+    .work-card{
+        width: 270px;
+        margin: 0 auto;
+
+    }
+    .chef-card{
+        margin: 0 auto;
+    }
+    .social{
+        width: 540px;
+        max-width: 100%;
+    }
+    .social-grid{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(400px, 1fr));
+    }
+    .dishes-card{
+        max-width: 100%;
+        width: 385px;
+        margin: 0 auto;
+    }
+    .about-img .img-left{
+        width: 400px;
+        object-fit: cover;
+        overflow: auto;
+        margin: auto;
+    }   
+    .about-img .img-right{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 621px) {
+    .navbar label,input{
+        display: block;
+    }
+    .nav-link{
+        position: fixed;
+        top: 0;
+        right: -100%;
+        height: 100%;
+        width: 100%;
+        background: #000;
+        transition: all 0.6s ease-in-out;
+    }
+    #active:checked ~ .nav-link{
+        right:0;
+    }
+    .menu-btn{
+        position: absolute;
+        z-index: 2;
+        right: 20px;
+        top: 20px;
+        height: 50px;
+        width: 50px;
+        text-align: center;
+        line-height: 50px;
+        border-radius: 50%;
+        font-size: 20px;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+    }
+    .menu-btn span,
+    .menu-btn:before,
+    .menu-btn:after{
+        content: "";
+        position: absolute;
+        top: calc(50% - 1px);
+        left: 30%;
+        width: 40%;
+        border-bottom: 2px solid #000;
+        transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    .menu-btn:before{
+        transform: translateY(-8px);
+    }
+    .menu-btn:after{
+        transform: translateY(8px);
+    }
+    .close {
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        transition: background .6s;
+    }
+    
+    /* closing animation */
+    #active:checked + .menu-btn span {
+        transform: scaleX(0);
+    }
+    #active:checked + .menu-btn:before {
+        transform: rotate(45deg);
+        border-color: #fff;
+    }
+    #active:checked + .menu-btn:after {
+        transform: rotate(-45deg);
+        border-color: #fff;
+    }
+    .nav-link ul{
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        height: 90%;
+        transform: translate(-50%, -50%);
+        list-style: none;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+    }
+    .nav-link ul li{
+        height: 10%;
+        margin: 15px 0;
+    }
+    .nav-link ul li a{
+        text-decoration: none;
+        font-size: 30px;
+        font-weight: 500;
+        padding: 5px 30px;
+        color: #fff;
+        border-radius: 50px;
+        position: absolute;
+        line-height: 50px;
+        margin: 5px 30px;
+        opacity: 0;
+        transition: all 0.3s ease;
+        transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    .nav-link ul li a:after{
+        position: absolute;
+        content: "";
+        background: #fff;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        border-radius: 50px;
+        transform: scaleY(0);
+        z-index: -1;
+        transition: transform 0.3s ease;
+    }
+    
+    .nav-link ul li a:hover:after{
+        transform: scaleY(1);
+    }
+    .nav-link ul li a:hover{
+        color: #1a73e8;
+    }
+    input[type="checkbox"]{
+        display: none;
+    }
+    
+    #active:checked ~ .nav-link ul li a{
+        opacity: 1;
+    }
+    .nav-link ul li a{
+        transition: opacity 1.2s, transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
+        transform: translateX(100px);
+    }
+    #active:checked ~ .nav-link ul li a{
+        transform: none;
+        transition-timing-function: ease, cubic-bezier(.1,1.3,.3,1); 
+        transition-delay: .6s;
+        transform: translateX(-100px);
+    }
+}
+
